--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,10 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  html {
-    @apply h-full bg-white;
-  }
-  body {
-    @apply h-full;
-  }
+    #__next {
+        @apply min-h-full flex-1 flex-col;
+    }
 }
